# open-belex-debug

./: .gitignore  README.md  environment.yml  package-lock.json  package.json  project.clj  setup.cfg  shadow-cljs.edn
.clj-kondo/: config.edn
resources/public/: index.html
src/belex_debug/: config.cljs  core.cljs  db.cljs  events.cljs  routes.cljs  styles.cljs  subs.cljs  views.cljs
src/cljs/belex_dbg/: adapters.cljs  config.cljs  core.cljs  db.cljs  diri.cljs  electron.cljs  events.cljs  sockets.cljs  subs.cljs  utils.cljs  views.cljs
src/python/belex_dbg/: io.py  server.py
src/python/belex_dbg/scripts/: belex_dbg.py
src/styles/: screen.scss
src/styles/belex_dbg/: core.clj
test/belex_debug/: core_test.cljs
test/cljs/belex_dbg/: core_test.cljs
