[metadata]
name = belex-debug
version = 1.0.0
author =
    Dylon Edwards
author_email =
    dthomas@gsitechnology.com
description = Belex debugger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/gsitech/belex-debug
project_urls =
    Bug Tracker = https://bitbucket.org/gsitech/belex-debug/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
package_dir =
    = src/python
packages = find:
python_requires = >=3.10
install_requires =
    Flask==2.2.3
    Pygments==2.15.0
    belex==1.0rc9
    click==8.1.3
    eventlet==0.33.3
    flask-socketio==5.3.3
    msgpack==1.0.5
    numpy==1.24.2
    reactivex==4.0.4

[options.packages.find]
where = src/python

[options.entry_points]
console_scripts =
    belex-dbg = belex_dbg.scripts.belex_dbg:main
